# pyrelated

./: .flake8  README.md  development.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md
pyrelated/: __main__.py  __version__.py  config.py  database.py  search.py
pyrelated/console/: application.py
pyrelated/console/commands/: config_command.py  greet_command.py  read_command.py  search_command.py
pyrelated/orm/: base.py  publication.py
pyrelated/search/: base.py  scholarly.py
tests/: test_config.py  test_database_bibtex.py  test_search.py
tests/orm/: test_database.py  test_dev.py
